--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
         <p><b>Departamentul de informatica</b> al Facultatii de Stiinte organizeaza concurs de admitere pentru urmatoarele programe de studii:</p>
         <p><b>Ciclul 1: Licenta (Facultate)</b>> - Locuri libere pentru sesiune de admitere septembrie 2019:</p>
         <table rules="all" border="1">
-            <tr rowspan="2">
+            <tr>
                 <th rowspan="2" width="150">Domeniul de Licenta</th>
                 <th rowspan="2" width="50">Specializarea</th>
                 <th rowspan="1" colspan="2" width="50">Numar de locuri</th>
@@ -51,12 +51,12 @@
             </tr>
         </table>
         <pre>Pentru detalii suplimentare consultati sectiunea <a href="pages/admitere.html">Admitere Master 2019</a></pre>
-        <table bordertop="1">
+        <table>
             <tr>
                 <th align="left" valign="top">
                     <h3>Domeniul de Licenta si Specializari</h3>
                     <h5>INFORMATICA</h5>
-                    <ul align="left">
+                    <ul>
                         <li>Durata studiilor: 3 ani</li>
                         <li>Diploma obtinuta: licenta in informatica</li>
                         <li>Specializari:
@@ -67,7 +67,7 @@
                     </ul>
                     <h5>MASTER IN INFORMATICA:</h5>
                     <pre>Tehnici avansate de prelucrare a infromatiei(in limba <br>engleza)</pre>
-                    <ul align="left">
+                    <ul>
                         <li>Durata studiilor: 2 ani</li>
                         <li>Diploma obtinuta: master in infromatica</li>
                     </ul>
@@ -76,7 +76,7 @@
                     <h3>Planuri de invatamant</h3>
                     <h5>Ciclul I - Licenta (3 ani)</h5>
                     <i>Informatica:</i>
-                    <ul align="left">
+                    <ul>
                         <li>
                             <p><a href="src/plan-invatamant-licenta-2018-2019-I.pdf">Anul I</a>, promotia 2018-2021</p>
                         </li>
@@ -89,7 +89,7 @@
                     </ul>
                     <p>Ciclul II Master:</p>
                     <i>Informatica - Metode si Modele ale Inteligentei Artificiale</i>
-                    <ul align="left">
+                    <ul>
                         <li>
                             <p><a href="http://cis01.central.ucv.ro/evstud/planuri/index.php?an_univ=2017&facultate=500013&ciclu=4&forma=2&specializare=500784&an_stud=1&cmdExecuta=Execut%C4%83">Anul I</a>, promotia 2015-2017</p>
                         </li>
