--- a/pages/admitere.html
+++ b/pages/admitere.html
@@ -8,13 +8,13 @@
         <h1>Admitere 2019 Licenta</h1>
         <h3>Cifra de scolarizare</h3>
         <p>Cifra de scolarizare pentru anul academic 2019-2020 pentru domeniul de licenta <i>Informatica</i> este urmatoarea:</p>
-        <table rules="all" border="1" height="70" width="400">
-            <tr height="" valign="top">
+        <table rules="all" border="1" width="400">
+            <tr valign="top">
                 <th rowspan="2">Domeniul de licenta</th>
                 <th rowspan="2">Specializarea</th>
                 <th height="50%" colspan="2" rowspan="1">Numar de locuri</th>
             </tr>
-            <tr height="50%">
+            <tr>
                 <th>Buget</th>
                 <th>Taxa</th>
             </tr>
