--- a/pages/cadre-didactice.html
+++ b/pages/cadre-didactice.html
@@ -59,7 +59,7 @@
                 <td width="250">
                     <p>Nume: <b>Boldea Costin</b></p>
                     <p>Grad: <b>Conf. </b>Titlu: <b>Dr.</b></p>
-                    <p>Pagina web: <a href="http://inf.ucv.ro/~iancu/">http://inf.ucv.ro/~boldea/</a></p>
+                    <p>Pagina web: <a href="http://inf.ucv.ro/~boldea/">http://inf.ucv.ro/~boldea/</a></p>
                 </td>
                 <td>
                     <p>Telefon de serviciu: <b>051-413728, 051-416574/4196</b></p>
@@ -337,7 +337,6 @@
                     <p>E-mail: <b>tudor.iris@gmail.com</b></p>
                 </td>
             </tr>
-
         </table>
     </body>
 </html>
